# ros-basics-python

./: README.md
src/: laser.bag
src/actions_quiz/: CMakeLists.txt  package.xml
src/actions_quiz/launch/: action_custom_msg.launch
src/basics_exam/: CMakeLists.txt  package.xml
src/basics_exam/launch/: check_distance_action.launch  distance_motion_service.launch  drone_takeoff.launch  main_program.launch  motion_service.launch  square_motion.launch
src/basics_exam/scripts/: OdomTopicSubsciber.py  check_distance_action.py  distance_motion_service.py  drone_takeoff.py  main_program.py  motion_service.py  square_motion.py
src/ex_3_1/: CMakeLists.txt  package.xml
src/ex_3_1/launch/: move_robot.launch
src/ex_3_1/scripts/: move_robot.py
src/ex_6_2_pkg/: CMakeLists.txt  package.xml
src/ex_6_2_pkg/launch/: call_bb8_move_in_circle_service_server.launch  start_bb8_move_in_circle_service_server.launch
src/ex_6_2_pkg/scripts/: bb8_move_in_circle_service_client.py  bb8_move_in_circle_service_server.py
src/ex_8_6_pkg/: CMakeLists.txt  package.xml
src/ex_8_6_pkg/launch/: move_drone.launch
src/ex_9_13_pkg/: CMakeLists.txt  package.xml
src/ex_9_13_pkg/launch/: move_drone_square.launch
src/my_action_client_example_pkg/: CMakeLists.txt  package.xml
src/my_custom_action_msg_pkg/: CMakeLists.txt  package.xml
src/my_custom_srv_msg_pkg/: CMakeLists.txt  package.xml
src/my_publisher_example_pkg/: CMakeLists.txt  package.xml
src/my_subscriber_example_pkg/: CMakeLists.txt  package.xml
src/services_quiz/: CMakeLists.txt  package.xml
(+13 files in other folders)
